--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -86,8 +86,401 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e230a2ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the requests library.\n",
+    "import requests\n",
+    "\n",
+    "# Import the API key.\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "694ca222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=b302b1c49258578c41414d021d1d5d3e\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Starting URL for Weather Map API Call.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "008dd7e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=b302b1c49258578c41414d021d1d5d3e&q=Boston\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "04897311",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a2efe618",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [404]>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d0cf2454",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f72048fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":803,\"main\":\"Clouds\",\"description\":\"broken clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":81.18,\"feels_like\":81,\"temp_min\":75.97,\"temp_max\":87.69,\"pressure\":1017,\"humidity\":42},\"visibility\":10000,\"wind\":{\"speed\":8.01,\"deg\":106,\"gust\":15.01},\"clouds\":{\"all\":64},\"dt\":1660590008,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1660557089,\"sunset\":1660607172},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request.\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "74386ba4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 803,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 81.18,\n",
+       "  'feels_like': 81,\n",
+       "  'temp_min': 75.97,\n",
+       "  'temp_max': 87.69,\n",
+       "  'pressure': 1017,\n",
+       "  'humidity': 42},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 8.01, 'deg': 106, 'gust': 15.01},\n",
+       " 'clouds': {'all': 64},\n",
+       " 'dt': 1660590008,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1660557089,\n",
+       "  'sunset': 1660607172},\n",
+       " 'timezone': -14400,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON text of the 'Get' request.\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "eb0f35fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c46a4425",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City weather not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0c54a7c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=b302b1c49258578c41414d021d1d5d3e&q=Bston\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "643c8e46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 803,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 81.18,\n",
+       "  'feels_like': 81,\n",
+       "  'temp_min': 75.97,\n",
+       "  'temp_max': 87.69,\n",
+       "  'pressure': 1017,\n",
+       "  'humidity': 42},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 8.01, 'deg': 106, 'gust': 15.01},\n",
+       " 'clouds': {'all': 64},\n",
+       " 'dt': 1660590008,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1660557089,\n",
+       "  'sunset': 1660607172},\n",
+       " 'timezone': -14400,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "73d5f337",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the JSON data.\n",
+    "boston_data = city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4aa9ef46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 87.69 42 64 8.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat, lng, max_temp, humidity, clouds, wind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7fa5b382",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-08-15 19:00:08'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the datetime module from the datetime library.\n",
+    "from datetime import datetime\n",
+    "# Get the date from the JSON file.\n",
+    "date = boston_data[\"dt\"]\n",
+    "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
+    "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "78bbacb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'08/15/22'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf64a412",
    "metadata": {},
    "outputs": [],
    "source": []
