--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "bdba456a",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "dc80d4f1",
    "metadata": {},
    "outputs": [
@@ -58,89 +58,89 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Busselton</td>\n",
-       "      <td>-33.6500</td>\n",
-       "      <td>115.3333</td>\n",
-       "      <td>56.97</td>\n",
-       "      <td>76</td>\n",
-       "      <td>61</td>\n",
-       "      <td>3.71</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>2022-10-20 23:12:45</td>\n",
+       "      <td>Palasa</td>\n",
+       "      <td>18.7667</td>\n",
+       "      <td>84.4167</td>\n",
+       "      <td>73.29</td>\n",
+       "      <td>62</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.92</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>2022-10-21 21:45:14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Mataura</td>\n",
-       "      <td>-46.1927</td>\n",
-       "      <td>168.8643</td>\n",
-       "      <td>50.14</td>\n",
-       "      <td>41</td>\n",
-       "      <td>71</td>\n",
-       "      <td>5.91</td>\n",
-       "      <td>NZ</td>\n",
-       "      <td>2022-10-20 23:17:10</td>\n",
+       "      <td>Punta Arenas</td>\n",
+       "      <td>-53.1500</td>\n",
+       "      <td>-70.9167</td>\n",
+       "      <td>51.91</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41.43</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>2022-10-21 21:45:15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Hilo</td>\n",
-       "      <td>19.7297</td>\n",
-       "      <td>-155.0900</td>\n",
-       "      <td>88.29</td>\n",
-       "      <td>70</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12.66</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2022-10-20 23:14:34</td>\n",
+       "      <td>Lluta</td>\n",
+       "      <td>-16.0147</td>\n",
+       "      <td>-72.0142</td>\n",
+       "      <td>52.25</td>\n",
+       "      <td>33</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.27</td>\n",
+       "      <td>PE</td>\n",
+       "      <td>2022-10-21 21:45:03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Diffa</td>\n",
-       "      <td>13.3154</td>\n",
-       "      <td>12.6113</td>\n",
-       "      <td>84.79</td>\n",
-       "      <td>21</td>\n",
-       "      <td>92</td>\n",
-       "      <td>8.41</td>\n",
-       "      <td>NE</td>\n",
-       "      <td>2022-10-20 23:17:11</td>\n",
+       "      <td>Pasni</td>\n",
+       "      <td>25.2631</td>\n",
+       "      <td>63.4710</td>\n",
+       "      <td>77.16</td>\n",
+       "      <td>83</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>PK</td>\n",
+       "      <td>2022-10-21 21:44:32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Hermanus</td>\n",
-       "      <td>-34.4187</td>\n",
-       "      <td>19.2345</td>\n",
-       "      <td>56.66</td>\n",
-       "      <td>85</td>\n",
-       "      <td>68</td>\n",
-       "      <td>9.55</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>2022-10-20 23:17:12</td>\n",
+       "      <td>Bethel</td>\n",
+       "      <td>41.3712</td>\n",
+       "      <td>-73.4140</td>\n",
+       "      <td>61.65</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.33</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2022-10-21 21:45:16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID       City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
-       "0        0  Busselton -33.6500  115.3333     56.97        76          61   \n",
-       "1        1    Mataura -46.1927  168.8643     50.14        41          71   \n",
-       "2        2       Hilo  19.7297 -155.0900     88.29        70           0   \n",
-       "3        3      Diffa  13.3154   12.6113     84.79        21          92   \n",
-       "4        4   Hermanus -34.4187   19.2345     56.66        85          68   \n",
+       "   City_ID          City      Lat      Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0        0        Palasa  18.7667  84.4167     73.29        62           9   \n",
+       "1        1  Punta Arenas -53.1500 -70.9167     51.91        40           0   \n",
+       "2        2         Lluta -16.0147 -72.0142     52.25        33           5   \n",
+       "3        3         Pasni  25.2631  63.4710     77.16        83           0   \n",
+       "4        4        Bethel  41.3712 -73.4140     61.65        48           0   \n",
        "\n",
        "   Wind Speed Country                 Date  \n",
-       "0        3.71      AU  2022-10-20 23:12:45  \n",
-       "1        5.91      NZ  2022-10-20 23:17:10  \n",
-       "2       12.66      US  2022-10-20 23:14:34  \n",
-       "3        8.41      NE  2022-10-20 23:17:11  \n",
-       "4        9.55      ZA  2022-10-20 23:17:12  "
+       "0        4.92      IN  2022-10-21 21:45:14  \n",
+       "1       41.43      CL  2022-10-21 21:45:15  \n",
+       "2        7.27      PE  2022-10-21 21:45:03  \n",
+       "3        5.82      PK  2022-10-21 21:44:32  \n",
+       "4        3.33      US  2022-10-21 21:45:16  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b711e321",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "14c68d7f",
    "metadata": {},
    "outputs": [],
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "87e4bd18",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b21532888804858b60ee52345ba1259",
+       "model_id": "a353fbe312b347049e3ce7e46a9164e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,25 +249,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bb59f1a2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1645182ef60744f19c5b5c62fec1f9bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Heatmap of percent humidity\n",
     "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
@@ -287,25 +272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0b30d921",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cc9bae96f9f42c1b30f92b72476d7e2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Heatmap of percent cloudiness\n",
     "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
@@ -325,25 +295,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3ba8c050",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d2adcc419e1420e88568eb53f36bd47",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Heatmap of wind speed\n",
     "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
@@ -363,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "361e5c65",
    "metadata": {},
    "outputs": [],
@@ -373,19 +328,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2996bc35",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is the minimum temperature you would like for your trip? 75\n",
-      "What is the maximum temperature you would like for your trip? 90\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ask the customer to add a minimum and maximum temperature value.\n",
     "min_temp = float(input(\"What is the minimum temperature you would like for your trip? \"))\n",
@@ -394,31 +340,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "003108c1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "City_ID       172\n",
-       "City          172\n",
-       "Lat           172\n",
-       "Lng           172\n",
-       "Max Temp      172\n",
-       "Humidity      172\n",
-       "Cloudiness    172\n",
-       "Wind Speed    172\n",
-       "Country       172\n",
-       "Date          172\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Filter the dataset to find the cities that fit the criteria.\n",
     "preferred_cities_df = city_data_df.loc[(city_data_df[\"Max Temp\"] <= max_temp) & \n",
@@ -428,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "32b8a03d",
    "metadata": {},
    "outputs": [],
@@ -438,153 +363,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a0f32643",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Hotel Name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Hilo</td>\n",
-       "      <td>US</td>\n",
-       "      <td>88.29</td>\n",
-       "      <td>19.7297</td>\n",
-       "      <td>-155.0900</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Diffa</td>\n",
-       "      <td>NE</td>\n",
-       "      <td>84.79</td>\n",
-       "      <td>13.3154</td>\n",
-       "      <td>12.6113</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Salinopolis</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>81.21</td>\n",
-       "      <td>-0.6136</td>\n",
-       "      <td>-47.3561</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Sarh</td>\n",
-       "      <td>TD</td>\n",
-       "      <td>75.87</td>\n",
-       "      <td>9.1429</td>\n",
-       "      <td>18.3923</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Adrar</td>\n",
-       "      <td>MR</td>\n",
-       "      <td>88.50</td>\n",
-       "      <td>20.5022</td>\n",
-       "      <td>-10.0711</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Atambua</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>79.48</td>\n",
-       "      <td>-9.1061</td>\n",
-       "      <td>124.8925</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Kapaa</td>\n",
-       "      <td>US</td>\n",
-       "      <td>77.09</td>\n",
-       "      <td>22.0752</td>\n",
-       "      <td>-159.3190</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Guerrero Negro</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>78.31</td>\n",
-       "      <td>27.9769</td>\n",
-       "      <td>-114.0611</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Damaturu</td>\n",
-       "      <td>NG</td>\n",
-       "      <td>81.41</td>\n",
-       "      <td>11.7470</td>\n",
-       "      <td>11.9608</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Acapulco</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>75.63</td>\n",
-       "      <td>16.8634</td>\n",
-       "      <td>-99.8901</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              City Country  Max Temp      Lat       Lng Hotel Name\n",
-       "2             Hilo      US     88.29  19.7297 -155.0900           \n",
-       "3            Diffa      NE     84.79  13.3154   12.6113           \n",
-       "7      Salinopolis      BR     81.21  -0.6136  -47.3561           \n",
-       "13            Sarh      TD     75.87   9.1429   18.3923           \n",
-       "15           Adrar      MR     88.50  20.5022  -10.0711           \n",
-       "16         Atambua      ID     79.48  -9.1061  124.8925           \n",
-       "24           Kapaa      US     77.09  22.0752 -159.3190           \n",
-       "27  Guerrero Negro      MX     78.31  27.9769 -114.0611           \n",
-       "28        Damaturu      NG     81.41  11.7470   11.9608           \n",
-       "30        Acapulco      MX     75.63  16.8634  -99.8901           "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create DataFrame called hotel_df to store hotel names along with city, country, max temp, and coordinates.\n",
     "hotel_df = preferred_cities_df[[\"City\", \"Country\", \"Max Temp\", \"Lat\", \"Lng\"]].copy()\n",
@@ -594,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "38664796",
    "metadata": {},
    "outputs": [],
@@ -615,34 +397,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hilo Bay Hostel found.\n",
-      "------------\n",
-      "Hotel not found... skipping.\n",
-      "------------\n",
-      "Hotel Solar found.\n",
-      "------------\n",
-      "Hotel not found... skipping.\n",
-      "------------\n",
-      "Hotel not found... skipping.\n",
-      "------------\n",
-      "Hotel King Star found.\n",
-      "------------\n",
-      "Hotel Coral Reef found.\n",
-      "------------\n",
-      "Hotel not found... skipping.\n",
-      "------------\n",
-      "GAAT HOTEL found.\n",
-      "------------\n",
-      "Hotel Krystal Beach Acapulco found.\n",
-      "------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for index, row in hotel_df.iterrows():\n",
     "    # Get the latitude and longitude.\n",
@@ -674,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "605629fc",
+   "id": "d8121c46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +443,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
+    "# Store the DataFrame Row.\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]"
    ]
   },
   {
@@ -719,31 +483,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info_box_template = \"\"\"\n",
-    "<dl>\n",
-    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
-    "<dt>City</dt><dd>{City}</dd>\n",
-    "<dt>Country</dt><dd>{Country}</dd>\n",
-    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
-    "</dl>\n",
-    "\"\"\""
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae723689",
+   "id": "301ed6bd",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Store the DataFrame Row.\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e15004",
+   "id": "6639ce57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -751,9 +505,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -765,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
